--- a/css/style.css
+++ b/css/style.css
@@ -504,17 +504,42 @@ h6 {
   TEXT ELEMENTS
   
 ----------------------------------------------------------------------------- */
+/**
+ * Some resets.
+ */
+p,
+ul,
+ol,
+a,
+b,
+strong,
+i,
+em {
+  margin: 0;
+  padding: 0;
+  font-size: 100%;
+}
+
+/**
+ * Links.
+ */
 a {
   text-decoration: none;
   -webkit-transition: color 0.3s;
           transition: color 0.3s;
 }
 
+/**
+ * Bold and strong elements.
+ */
 b,
 strong {
   font-weight: 700;
 }
 
+/**
+ * Italics and emphasised elements.
+ */
 i,
 em {
   font-style: italic;
@@ -802,4 +827,110 @@ img {
 .c-hero {
   padding: 24px 0;
   background-color: #343434;
+  text-align: center;
+}
+
+/**
+ * The heading.
+ */
+.c-hero__heading {
+  color: #fff;
+  font-size: 22px;
+  text-transform: uppercase;
+}
+
+/**
+ * The sub heading.
+ */
+.c-hero__sub-heading {
+  color: #96aa96;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
+/**
+ * Text
+ */
+.c-hero__text {
+  color: #fff;
+}
+
+/**
+ * Hero special... i.e. on the home page.
+ */
+.c-hero--special .c-hero__inner {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+@media all and (min-width: 720px) {
+  .c-hero--special .c-hero__inner {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+.c-hero--special .c-hero__heading {
+  margin-bottom: 24px;
+  font-size: 28px;
+}
+@media all and (min-width: 720px) {
+  .c-hero--special .c-hero__heading {
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 0 288px;
+        -ms-flex: 0 0 288px;
+            flex: 0 0 288px;
+    margin-bottom: 0;
+    padding-right: 24px;
+    text-align: right;
+  }
+}
+@media all and (min-width: 1020px) {
+  .c-hero--special .c-hero__heading {
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 0 336px;
+        -ms-flex: 0 0 336px;
+            flex: 0 0 336px;
+    font-size: 42px;
+  }
+}
+@media all and (min-width: 1200px) {
+  .c-hero--special .c-hero__heading {
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 0 432px;
+        -ms-flex: 0 0 432px;
+            flex: 0 0 432px;
+    font-size: 48px;
+  }
+}
+@media all and (min-width: 720px) {
+  .c-hero--special .c-hero__content {
+    padding: 24px 0 24px 48px;
+    text-align: right;
+    border-left: solid 1px #5f6c5f;
+  }
+}
+@media all and (min-width: 1020px) {
+  .c-hero--special .c-hero__content {
+    padding: 48px 0 48px 96px;
+  }
+}
+.c-hero--special .c-hero__sub-heading {
+  margin-bottom: 12px;
+  font-size: 18px;
+}
+.c-hero--special .c-hero__text {
+  margin-bottom: 12px;
 }
