--- a/sass/style.scss
+++ b/sass/style.scss
@@ -64,3 +64,4 @@
 @import "components.navigation-primary";
 @import "components.navigation-secondary";
 @import "components.hero";
+@import "components.buttons";
