--- a/sass/_config.variables.scss
+++ b/sass/_config.variables.scss
@@ -51,13 +51,15 @@ $lh--l: 2;
 // -----------------------------------------------------------------------------
 
 $color--neutral-dark: rgb(52, 52, 52);
-$color--neutral: rgb(95, 108, 95);
 
 $color--green: rgb(170, 210, 100);
 $color--dark-green: rgb(85, 159, 65);
-$color--purple: rgb(83, 60, 159);
-$color--lilac: rgb(188, 157, 216);
+
+$color--purple: rgb(188, 157, 216);
+$color--dark-purple: rgb(83, 60, 159);
+
 $color--slate: rgb(150, 170, 150);
+$color--dark-slate: rgb(95, 108, 95);
 
 
 
