--- a/sass/_elements.root.scss
+++ b/sass/_elements.root.scss
@@ -11,7 +11,7 @@ body {
 }
 
 body {
-  color: $color--neutral;
+  color: $color--dark-slate;
   background-color: $color--neutral-dark;
   font-family: $font-family--primary;
   font-size: $font-size--s;
