--- a/sass/style.scss
+++ b/sass/style.scss
@@ -64,4 +64,5 @@
 @import "components.navigation-primary";
 @import "components.navigation-secondary";
 @import "components.hero";
+@import "components.cta";
 @import "components.buttons";
