--- a/sass/style.scss
+++ b/sass/style.scss
@@ -65,4 +65,5 @@
 @import "components.navigation-secondary";
 @import "components.hero";
 @import "components.cta";
+@import "components.process";
 @import "components.buttons";
