--- a/sass/style.scss
+++ b/sass/style.scss
@@ -66,4 +66,5 @@
 @import "components.hero";
 @import "components.cta";
 @import "components.process";
+@import "components.testimonials";
 @import "components.buttons";
