--- a/sass/_components.navigation-primary.scss
+++ b/sass/_components.navigation-primary.scss
@@ -5,7 +5,7 @@
 ----------------------------------------------------------------------------- */
 
 .c-navigation-primary {
-  /* the container */
+  /**/
 }
 
 /**
