--- a/sass/_components.navigation-secondary.scss
+++ b/sass/_components.navigation-secondary.scss
@@ -5,7 +5,7 @@
 ----------------------------------------------------------------------------- */
 
 .c-navigation-secondary {
-  
+  /**/
 }
 
 .c-navigation-secondary__items {
