--- a/sass/_components.hero.scss
+++ b/sass/_components.hero.scss
@@ -5,7 +5,6 @@
 ----------------------------------------------------------------------------- */
 
 .c-hero {
-  padding: 24px 0;
   background-color: $color--neutral-dark;
   text-align: center;
 }
@@ -103,4 +102,18 @@
     }
   }
 
+}
+
+/**
+ * Hero normal... i.e. on all other pages.
+ */
+
+.c-hero--normal {
+
+  .c-hero__heading {
+    @include mq-medium {
+      font-size: $font-size--xl;
+    }
+  }
+  
 }
